--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <h2>florida</h2>
             <div class="destination" id="paris">
                 <h2>Paris</h2>
+            <div class="destination" id="scotland">
+                <h2>Scotland</h2>
             </div>
         </div>
     </div>
